--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -8,6 +8,12 @@ main {
     flex: 1 0 auto;
 }
 
+h1 {
+    font-size: 16px;
+    line-height: 100%;
+    margin: 10px 0;
+}
+
 nav .brand-logo {
     font-size: 1.8rem;
     line-height: 56px;
