--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -93,3 +93,24 @@ footer.page-footer {
     width: 25%;
     border-radius: 20px;
 }
+
+.set-info-form-label-container {
+    height: 50px;
+}
+
+.set-info-form-label {
+    margin-left: auto;
+    font-size: 16px;
+}
+
+.code {
+    background-color: black;
+    padding: 10px;
+    margin: 10px;
+    color: white;
+}
+
+#file-upload-text {
+    height: 30vh;
+    overflow-y: scroll;
+}
