margin between item blocks

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -149,3 +149,11 @@ footer.page-footer {
 .item:hover {
     cursor: move;
 }
+
+#item-set-blocks {
+    border: 0;
+}
+
+#item-set-blocks li {
+    margin-bottom: 20px;
+}
