added shadows to item slots

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -125,6 +125,7 @@ footer.page-footer {
     height: 64px;
     border-radius: 10px;
     border: 1px solid gray;
+    box-shadow: 1px 1px 5px;
 }
 
 .clearfix:after {
