--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -184,3 +184,35 @@ consumable {
 #item-set-blocks li {
     margin-bottom: 20px;
 }
+
+.collapsible-header {
+    pointer-events: none;
+}
+
+#item-set-blocks li {
+    position: relative;
+}
+
+.item-block-buttons {
+    position: absolute;
+    left: 10px;
+    top: 10px;
+}
+
+.item-block-buttons i {
+    margin-right: 15px;
+    color: #5f5f5f;
+}
+
+.toggle-item-block-button:hover, .edit-item-block-button:hover {
+    cursor: pointer;
+}
+
+.noselect {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
