--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -216,3 +216,28 @@ consumable {
     -ms-user-select: none;
     user-select: none;
 }
+
+#all-items-container {
+    position: relative;
+}
+
+.filter-items-button {
+    float: left;
+    padding: 13px 13px 13px 3px;
+    -webkit-transition: all 0.5s ease;
+}
+
+.filter-items-button:hover {
+    -webkit-filter: contrast(20%);
+    -webkit-transition: all 0.5s ease;
+    cursor: pointer;
+}
+
+.filter-menu {
+    display: none;
+    position: absolute;
+    width: 200px;
+    left: 0;
+    height: 57vh;
+    color: #7F7F7F !important;
+}
