upload and download works with set-info

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -120,6 +120,8 @@ consumable {
 .set-info-form-label {
     margin-left: auto;
     font-size: 16px;
+    text-align: left;
+    width: 100%;
 }
 
 .code {
@@ -289,15 +291,50 @@ consumable {
 
 .map-select, .champ-select {
     width: 95%;
+
     -webkit-filter: contrast(50%);
+    -moz-filter: contrast(50%);
+    -ms-filter: contrast(50%);
+    -o-filter: contrast(50%);
     filter: contrast(50%);
+
+    -webkit-transition: all 0.5s ease; /* Safari and Chrome */
+    -moz-transition: all 0.5s ease; /* Firefox */
+    -ms-transition: all 0.5s ease; /* IE 9 */
+    -o-transition: all 0.5s ease; /* Opera */
     transition: all 0.5s ease;
-    -webkit-transition: all 0.5s ease;
 }
 
 .map-select:hover, .champ-select:hover {
     -webkit-filter: contrast(100%);
+    -moz-filter: contrast(100%);
+    -ms-filter: contrast(100%);
+    -o-filter: contrast(100%);
     filter: contrast(100%);
+
+    -webkit-transition: all 0.5s ease; /* Safari and Chrome */
+    -moz-transition: all 0.5s ease; /* Firefox */
+    -ms-transition: all 0.5s ease; /* IE 9 */
+    -o-transition: all 0.5s ease; /* Opera */
     transition: all 0.5s ease;
-    -webkit-transition: all 0.5s ease;
+}
+
+.map-selected, .champ-selected {
+    border: 1px solid white;
+
+    -webkit-filter: contrast(100%);
+    -moz-filter: contrast(100%);
+    -ms-filter: contrast(100%);
+    -o-filter: contrast(100%);
+    filter: contrast(100%);
+
+    -webkit-transition: all 0.5s ease; /* Safari and Chrome */
+    -moz-transition: all 0.5s ease; /* Firefox */
+    -ms-transition: all 0.5s ease; /* IE 9 */
+    -o-transition: all 0.5s ease; /* Opera */
+    transition: all 0.5s ease;
+}
+
+.help-tooltip {
+    cursor: pointer;
 }
