added download instructions

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -338,3 +338,9 @@ consumable {
 .help-tooltip {
     cursor: pointer;
 }
+
+code {
+    padding: 10px;
+    margin: 5px;
+    border: 2px grey solid;
+}
