--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -227,7 +227,19 @@ consumable {
     color: #5f5f5f;
 }
 
-.toggle-item-block-button:hover, .edit-item-block-button:hover {
+.item-block-close-button {
+    position: absolute;
+    right: 10px;
+    top: 10px;
+}
+
+.item-block-close-button i {
+    margin-left: 15px;
+    color: #5f5f5f;
+}
+
+
+.toggle-item-block-button:hover, .edit-item-block-button:hover, .close-item-block-button:hover {
     cursor: pointer;
 }
 
