--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -77,10 +77,33 @@ footer.page-footer {
 
 #toolbar {
     height: 48px;
+    position: relative;
 }
 
-#toolbar a {
+#menu-buttons-left {
+    position: absolute;
+    left: 12px;
+    top: 5px;
+}
+
+#menu-buttons-left a {
+    float: left;
     margin-right: 10px;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+#menu-buttons-right {
+    position: absolute;
+    right: 12px;
+    top: 5px;
+}
+
+#menu-buttons-right a {
+    float: right;
+    margin-left: 10px;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
 #item-selection {
