--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -9,6 +9,12 @@ main {
     flex: 1 0 auto;
 }
 
+iframe {
+    width: 100%;
+    height: 98%;
+    border: 0;
+}
+
 h1 {
     font-size: 16px;
     line-height: 100%;
