--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -112,6 +112,55 @@ footer.page-footer {
     padding-right: 15px;
 }
 
+.spinner-white,
+.spinner-white-only {
+    border-color: #DDDDDD;
+}
+
+.active .spinner-layer.spinner-white-only {
+    opacity: 1;
+    -webkit-animation: fill-unfill-rotate 5332ms cubic-bezier(0.4, 0.0, 0.2, 1) infinite both;
+    animation: fill-unfill-rotate 5332ms cubic-bezier(0.4, 0.0, 0.2, 1) infinite both;
+}
+
+.summary-box {
+    height: 98%;
+}
+
+.summary-progress {
+    margin: 0 auto;
+    width: 64px;
+    padding-top: 100px
+}
+
+.summary-content {
+    display: none;
+}
+
+.summary-title-container {
+    padding: 15px;
+    font-size: 20px;
+    border-radius: 3px;
+}
+
+.summary-efficiency, .summary-tags {
+    margin: 10px 0;
+    padding: 20px 0;
+    font-size: 20px;
+    border-radius: 3px;
+}
+
+.summary-efficiency .s8 {
+    text-align: center;
+    padding: 10px;
+    height: 128px;
+    border-radius: 3px;
+}
+
+.summary-efficiency .s8 div {
+    margin: 10px 0;
+}
+
 #item-selection {
     height: 70vh;
 }
@@ -408,5 +457,5 @@ code {
 }
 
 .item-efficiency-positive {
-    color: green;
+    color: #00D800;
 }
